# temporary-cabinet

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: cabinet.rs  crypto.rs  lib.rs  test.rs
domain/: Cargo.toml
domain/locales/: en-GB.json  en-US.json  zh-CN.json  zh-HK.json  zh-TW.json
domain/src/: lib.rs
domain/src/entity/: cabinet.rs  crypto.rs  mod.rs
domain/src/error/: cabinet.rs  crypto.rs  mod.rs
domain/src/repository/: crypto.rs
domain/src/repository/cabinet/: cabinet_item_repository.rs  cabinet_repository.rs  mod.rs
domain/src/service/: cabinet.rs  crypto.rs
infrastructure/: Cargo.toml
infrastructure/src/: database.rs  lib.rs
infrastructure/src/entity/: cabinet.rs  cabinet_item.rs  keypair.rs  mod.rs
infrastructure/src/repository/: crypto.rs
infrastructure/src/repository/cabinet/: cabinet_item_repository.rs  cabinet_repository.rs
infrastructure/src/service/: cabinet.rs  crypto.rs  mod.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/extract/: accept_language.rs  mod.rs
interface/src/handler/: cabinet.rs  crypto.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251022_001_create_table_cabinet.rs  m20251022_002_create_table_cabinet_item.rs  m20251024_001_create_table_keypair.rs
package/: temporary-cabinet.service
package/debian/: postinst  postrm  prerm
src/: arg.rs  init.rs  main.rs
src/init/: mod.rs  ticker.rs
web/: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  build.rs  eslint.config.js  index.html  package.json
web/src/: App.vue  lib.rs  main.js  router.js
web/src/api/: cabinet.js  crypto.js
web/src/components/: PasswordInput.vue
web/src/locales/: en-GB.js  en-US.js  index.js  zh-CN.js  zh-HK.js  zh-TW.js
web/src/plugins/: dayjs.js
web/src/utils/: crypto.js  index.js  request.js
web/src/views/: Home.vue  Pick.vue
