[package]
name = "temporary-cabinet"
version.workspace = true
edition.workspace = true

[dependencies]
web.workspace = true
interface.workspace = true
migration.workspace = true
infrastructure.workspace = true
log.workspace = true
simple_logger.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
tower-http.workspace = true
axum-embed.workspace = true
tower.workspace = true
sea-orm.workspace = true


[workspace]
members = [".", "interface", "domain", "web", "migration", "infrastructure"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Self
web.path = "web"
interface.path = "interface"
domain.path = "domain"
migration.path = "migration"
infrastructure.path = "infrastructure"
# Dependencies
async-trait = "0.1.89"
clap = { version = "4.5.50", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
gm-sm2 = "0.13.0"
log = "0.4"
hex = "0.4.3"
simple_logger = "5"
rust-embed = "8"
rand = "0.9.2"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-embed = "0.1.0"
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sea-orm = { version = "1.1.17", features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1.17", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tower = "0.5.2"
tower-http = { version = "0.6", features = [
    "compression-full",
    "decompression-full",
] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
