[package]
name = "interface"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace = true
infrastructure.workspace = true
axum.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
log.workspace = true
rand.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
